feat(search): support custom search engines
