# internal/model/apis_define.go
@@ -5,14 +5,15 @@ const PREFIX_V1 = "/api/v1"
 
 // API routing path definition.
 const (
-	API_ABOUT     = "/about"
-	API_ADMIN     = "/admin"
-	API_BOOKMARKS = "/bookmarks"
-	API_CONFIG    = "/config"
-	API_FILES     = "/files"
-	API_FOLDERS   = "/folders"
-	API_ICONS     = "/icons"
-	API_IMPORT    = "/import"
-	API_LIST      = "/list"
-	API_LOGINS    = "/logins"
+	API_ABOUT          = "/about"
+	API_ADMIN          = "/admin"
+	API_BOOKMARKS      = "/bookmarks"
+	API_CONFIG         = "/config"
+	API_FILES          = "/files"
+	API_FOLDERS        = "/folders"
+	API_ICONS          = "/icons"
+	API_IMPORT         = "/import"
+	API_LIST           = "/list"
+	API_LOGINS         = "/logins"
+	API_SEARCH_ENGINES = "/search-engines"
 )
